--- a/hero-page/index.css
+++ b/hero-page/index.css
@@ -7,6 +7,10 @@
     font-family: 'poppins',sans-serif;
 }
 
+.html{
+    scroll-behavior: smooth;
+}
+
 .hero{
     height: 100vh;
     width: 100%;
@@ -589,7 +593,7 @@
     transform: translateY(-50%);
 }
 
-.consulting h3{
+#consulting h3{
     font-size: 39.41px;
     font-weight: 600;
     line-height: 59.11px;
@@ -598,7 +602,7 @@
     margin-top: 20px;
 }
 
-.consulting h5{
+#consulting h5{
     color: #2E2E2E;
     font-size: 15.76px;
     font-weight: 400;
@@ -650,7 +654,7 @@
     cursor: pointer;
 }
 
-.blog{
+#blog{
     display: flex;
     justify-content: space-between;
 }
@@ -976,4 +980,22 @@
     margin-left: 20px;
     width: 37px;
     height: 56px;
+}
+
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none; /* Initially hidden */
+    background-color: #4CAF50;
+    color: black;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s;
+}
+.back-to-top:hover {
+    background-color: #1E88E5;
 }
