--- a/hero-page/index.css
+++ b/hero-page/index.css
@@ -739,7 +739,7 @@
 
 .FAQ button{
     width: 100%;
-    height: 86.7px;
+    height: 200px;
     top: 5036.43px;
     left: 140.58px;
     padding: 25.62px 24.63px 26.08px 23.15px;
@@ -753,6 +753,16 @@
     text-align: left;
     margin-top: 15px;
     border: none;
+}
+
+.FAQ button h5{
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 29px;
+    text-align: left;
+    color: #4E4E4E;
+    margin-top: 10px;
 }
 
 .newsletter{
@@ -980,22 +990,4 @@
     margin-left: 20px;
     width: 37px;
     height: 56px;
-}
-
-.back-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    display: none; /* Initially hidden */
-    background-color: #4CAF50;
-    color: black;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s;
-}
-.back-to-top:hover {
-    background-color: #1E88E5;
 }
