--- a/About-Us/about-us.css
+++ b/About-Us/about-us.css
@@ -14,7 +14,7 @@
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(./images/f5ee094318c8cec5737a5dc517ebe7fc.jpeg);
+    background-image: url(./images/background-image.jpeg);
     background-position: center;
     background-size:cover;
 }
@@ -22,7 +22,7 @@
 #nav-bar{
     display: flex;
     align-items: center;
-    margin: 5rem 7rem 7rem 7rem;
+    margin: 5rem 12rem 7rem 12rem;
     padding:1rem;
     justify-content: space-between;
     border: 2px solid white;
@@ -38,7 +38,7 @@
 
 #nav-bar h5{
     color:#004C1F;
-    margin-left: -270px;
+    margin-left: -200px;
 }
 
 #nav-bar ul li{
@@ -55,8 +55,11 @@
 
 #nav-bar ul li a:hover{
     text-decoration: none;
-    color: green;
+    color: #004C1F;
     font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
 }
 
 #btn-1{
@@ -75,6 +78,22 @@
     border: 2px solid #004C1F ;
     }
 
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
 #btn-2{
     border:none;
     background-color: #004C1F;
@@ -89,7 +108,28 @@
     padding: 8px 16px 8px 16px;
     gap: 10px;
     border-radius: 35px;
-    margin-right: -270px;
+    margin-right: -190px;
+}
+
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
+.hero{
+    background-image: url(./images/f5ee094318c8cec5737a5dc517ebe7fc.jpeg);
 }
 
 .hero h1{
@@ -369,6 +409,18 @@
     padding-right: 150px;
 }
 
+.footer-info-1 a:hover{
+    text-decoration: none;
+    color: #004C1F;
+    font-weight: bold;
+    transition: 0.2s;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 27px;
+    padding-right: 150px;
+}
+
+
 .footer-info-2{
     display: flex;
     flex-direction: row;
@@ -394,6 +446,18 @@
 
 }
 
+.footer-info-2-link a:hover{
+    padding-right: 140px;
+    padding-bottom: 10px;
+    color: #004C1F;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+
+}
+
 .footer-info-2-link-contact{
     display: flex;
     flex-direction: column;
@@ -407,6 +471,16 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
+
+.footer-info-2-link-contact a:hover{
+    padding-bottom: 10px;
+    color: #004C1F;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
     line-height: 24px;
     text-align: left;
 }
