--- a/Auth-Page/login.css
+++ b/Auth-Page/login.css
@@ -7,9 +7,14 @@
     font-family: 'poppins',sans-serif;
 }
 
+.html{
+    scroll-behavior: smooth;
+}
+
 .hero{
     height: 100vh;
     width: 100%;
+    background-image: url(./images/background-image.jpeg);
     background-position: center;
     background-size:cover;
 }
@@ -17,14 +22,13 @@
 #nav-bar{
     display: flex;
     align-items: center;
-    margin: 5rem 7rem 4rem 7rem;
+    margin: 5rem 12rem 5rem 12rem;
     padding:1rem;
     justify-content: space-between;
-    border: 2px solid white;
+    border: 2px solid #004C1F;
     border-radius: 60px;
     background-color: white;
     font-size: 20px;
-    border: 3px solid #2E2E2E;
 }
 
 #nav-bar img{
@@ -34,7 +38,7 @@
 
 #nav-bar h5{
     color:#004C1F;
-    margin-left: -270px;
+    margin-left: -200px;
 }
 
 #nav-bar ul li{
@@ -51,8 +55,11 @@
 
 #nav-bar ul li a:hover{
     text-decoration: none;
-    color: green;
+    color: #004C1F;
     font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
 }
 
 #btn-1{
@@ -71,6 +78,22 @@
     border: 2px solid #004C1F ;
     }
 
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
 #btn-2{
     border:none;
     background-color: #004C1F;
@@ -85,20 +108,38 @@
     padding: 8px 16px 8px 16px;
     gap: 10px;
     border-radius: 35px;
-    margin-right: -270px;
-
+    margin-right: -190px;
 }
+
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
+}
+
 
 .signup-info{
     display: flex;
     justify-content: space-between;
-    margin-left: 7rem;
-    margin-right: 7rem;
+    margin-left: 12rem;
+    margin-right: 12rem;
 }
 
 .signup-image img{
     Width:568px;
-    Height:540px;
+    Height:530px;
+
     /* padding: 507px 443.25px 14.5px 16px; */
     border-radius: 16px;
 }
@@ -158,7 +199,7 @@
 }
 
 .name input{
-    width: 850px;
+    width: 700px;
     height: Hug (46px)px;
     padding: 11px;
     margin-right: 50px;
@@ -190,7 +231,7 @@
 }
 
 .other-info input{
-    width: 850px;
+    width: 700px;
     height: Hug (46px)px;
     padding: 11px;
     margin-right: 50px;
@@ -208,8 +249,24 @@
 }
 
 .signup-form button{
-    width: 850px;
+    width: 700px;
     height: Fixed (56px)px;
+    top: 260px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    margin-top:40px ;
+    background-color: #004C1F;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: center;
+    color: #F3F4E5;
+}
+
+.signup-form button:hover{
+    width: 700px;
+    height: 60px;
     top: 260px;
     padding: 11px;
     gap: 10px;
@@ -231,5 +288,15 @@
     color: #000000;
     text-align: center;
     padding-top: 30px;
+}
+
+.signup-form a{
+
+    color: #004C1F;
+}
+
+.signup-form a:hover{
+    font-weight: bold;
+    color: #004C1F;
 }
 
