--- a/Auth-Page/signup.css
+++ b/Auth-Page/signup.css
@@ -7,9 +7,14 @@
     font-family: 'poppins',sans-serif;
 }
 
+.html{
+    scroll-behavior: smooth;
+}
+
 .hero{
     height: 100vh;
     width: 100%;
+    background-image: url(./images/background-image.jpeg);
     background-position: center;
     background-size:cover;
 }
@@ -17,14 +22,13 @@
 #nav-bar{
     display: flex;
     align-items: center;
-    margin: 5rem 7rem 4rem 7rem;
+    margin: 5rem 12rem 5rem 12rem;
     padding:1rem;
     justify-content: space-between;
-    border: 2px solid white;
+    border: 2px solid #004C1F;
     border-radius: 60px;
     background-color: white;
     font-size: 20px;
-    border: 3px solid #2E2E2E;
 }
 
 #nav-bar img{
@@ -34,7 +38,7 @@
 
 #nav-bar h5{
     color:#004C1F;
-    margin-left: -270px;
+    margin-left: -200px;
 }
 
 #nav-bar ul li{
@@ -51,8 +55,11 @@
 
 #nav-bar ul li a:hover{
     text-decoration: none;
-    color: green;
+    color: #004C1F;
     font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
 }
 
 #btn-1{
@@ -71,6 +78,22 @@
     border: 2px solid #004C1F ;
     }
 
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
 #btn-2{
     border:none;
     background-color: #004C1F;
@@ -85,36 +108,176 @@
     padding: 8px 16px 8px 16px;
     gap: 10px;
     border-radius: 35px;
-    margin-right: -270px;
+    margin-right: -190px;
+}
 
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
 }
 
 .signup-info{
     display: flex;
     justify-content: space-between;
-    margin-left: 7rem;
-    margin-right: 7rem;
+    margin-left: 12rem;
+    margin-right: 12rem;
+}
+
+
+.signup-form{
+    display:block;
+}
+
+.personal-info-1{
+    display: none;
+}
+
+.personal-info-2{
+    display: none;
 }
 
 .signup-image img{
+
     Width:568px;
     Height:540px;
     /* padding: 507px 443.25px 14.5px 16px; */
     border-radius: 16px;
 }
 
+.sign-up-result-1{
+    text-align: center;
+    width: 567px;
+    height: 534px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 37rem;
+    margin-right: 37rem;
+}
+
+.sign-up-result-1 p{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: center;
+    color: #2E2E2E;
+}
+
+.sign-up-result-1 h4{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: center;
+    margin-bottom: 25px;
+    color: #2E2E2E;
+}
+
+.sign-up-result-1 i{
+    font-size: 300px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: #004C1F;
+}
+
+.failed i{
+    color: #FF0000;
+}
+
+
+.failed{
+    display: none;
+}
+
+.my-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.update-btn{
+    margin-right: 20px;
+    width: 300px;
+    height: Fixed (56px)px;
+    top: 478px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    background-color:#004C1F;
+    color: #F3F4E5;
+}
+
+.update-btn:hover{
+    margin-right: 20px;
+    width: 300px;
+    height: Fixed (56px)px;
+    top: 478px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    background-color:#F3F4E5;
+    color: #004C1F;
+    transition: 0.3s;
+}
+
+.add-later-btn{
+    margin-right: 20px;
+    width: 300px;
+    height: Fixed (56px)px;
+    top: 478px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    background-color:#F3F4E5;
+    color: #004C1F;
+}
+
+.add-later-btn:hover{
+    margin-right: 20px;
+    width: 300px;
+    height: Fixed (56px)px;
+    top: 478px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    background-color:#004C1F;
+    color: #F3F4E5;
+    transition: 0.3s;
+}
+
+.sign-up-result-1 h4{
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+text-align: center;
+}
+
+
+
 .progress-bar{
     display: flex;
     flex-direction: row;
-    width: 850px;
-    justify-content: space-between;
+    width: 700px;
+    /* justify-content: space-between; */
 }
 
 .progress{
     display: flex;
     flex-direction: row;
-    width: 850px;
-    justify-content:space-between;
+    width: 700px;
+    /* justify-content:space-between; */
 }
 
 #chart{
@@ -122,6 +285,7 @@
     height: 8px;
     top: 38px;
     border-radius: 70px;
+    margin-right: 100px;
     margin-bottom: 40px;
     color:#D7E5BE;    
     background-color: #D7E5BE;
@@ -129,10 +293,11 @@
 
 .progress-bar h5{
     margin-bottom: 10px;
+    margin-right: 120px;
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
-    text-align: right;
+    text-align: left;
 }
 
 .signup-form h1{
@@ -158,7 +323,7 @@
 }
 
 .name input{
-    width: 400px;
+    width: 300px;
     height: Hug (46px)px;
     padding: 11px;
     margin-right: 50px;
@@ -190,7 +355,7 @@
 }
 
 .other-info input{
-    width: 400px;
+    width: 300px;
     height: Hug (46px)px;
     padding: 11px;
     margin-right: 50px;
@@ -208,8 +373,24 @@
 }
 
 .signup-form button{
-    width: 850px;
+    width: 650px;
     height: Fixed (56px)px;
+    top: 260px;
+    padding: 11px;
+    gap: 10px;
+    border-radius: 8px;
+    margin-top:40px ;
+    background-color: #004C1F;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: center;
+    color: #F3F4E5;
+}
+
+.signup-form button:hover{
+    width: 650px;
+    height: 60px;
     top: 260px;
     padding: 11px;
     gap: 10px;
@@ -232,4 +413,12 @@
     text-align: center;
     padding-top: 30px;
 }
+.signup-form a{
 
+    color: #004C1F;
+}
+
+.signup-form a:hover{
+    font-weight: bold;
+    color: #004C1F;
+}
