--- a/hero-page/index.css
+++ b/hero-page/index.css
@@ -22,7 +22,7 @@
 #nav-bar{
     display: flex;
     align-items: center;
-    margin: 5rem 7rem 7rem 7rem;
+    margin: 5rem 12rem 7rem 12rem;
     padding:1rem;
     justify-content: space-between;
     border: 2px solid white;
@@ -38,7 +38,7 @@
 
 #nav-bar h5{
     color:#004C1F;
-    margin-left: -270px;
+    margin-left: -200px;
 }
 
 #nav-bar ul li{
@@ -55,8 +55,11 @@
 
 #nav-bar ul li a:hover{
     text-decoration: none;
-    color: green;
+    color: #004C1F;
     font-weight: bold;
+    position: relative;
+    top: -5px;
+    transition: 2s;
 }
 
 #btn-1{
@@ -75,6 +78,22 @@
     border: 2px solid #004C1F ;
     }
 
+    #btn-1:hover{
+        background-color:#004C1F;
+        color:#FFFFFF;
+        border-radius: 30px;
+        font-size: 20px;
+        font-weight: bold;
+        cursor: pointer;
+        width: Hug (94px)px;
+        height: Hug (40px)px;
+        padding: 8px 16px 8px 16px;
+        gap: 4px;
+        border-radius: 34px;
+        border: 2px solid #004C1F ;
+        transition: 0.3s;
+        }
+
 #btn-2{
     border:none;
     background-color: #004C1F;
@@ -89,8 +108,24 @@
     padding: 8px 16px 8px 16px;
     gap: 10px;
     border-radius: 35px;
-    margin-right: -270px;
+    margin-right: -190px;
+}
 
+#btn-2:hover{
+    border:2px solid #004C1F;
+    background-color: #FFFFFF;
+    color:#004C1F;
+    padding: 1rem;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    width: Hug (80px)px;
+    height: Hug (40px)px;
+    padding: 8px 16px 8px 16px;
+    gap: 10px;
+    border-radius: 35px;
+    margin-right: -190px;
 }
 
 .hero-info{
@@ -193,7 +228,7 @@
     color: #2E2E2E;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 28px;
     text-align: left;
 }
 
@@ -218,6 +253,23 @@
     top: 50%;
     right: 5px;
     transform: translateY(-50%);
+}
+
+#At-Biotech button:hover{
+    position: relative;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding-right: 20px;
+    border: 2px solid #004C1F;
+    background-color: #004C1F;
+    color: #F3F4E5;
+    width: 130px;
+    height: 42px;
+    padding: 7.88px 15.76px 7.88px 15.76px;
+    gap: 7.88px;
+    border-radius: 41.38px;
+    cursor: pointer;
+    transition: 0.1s;
 }
 
 .subscription-plan h1{
@@ -268,6 +320,15 @@
     position: relative;
     width: 33%;
     margin-right: 30px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.growth-plan:hover{
+    border: 2px solid #D7E5BE;
+    border-radius: 16px;
+    padding: 20px;
+    width: 33%;
+    transform: scale(1.05);
 }
 
 .main-head{
@@ -364,6 +425,16 @@
     padding: 20px;
     position: relative;
     width: 33%;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.Elite-plan:hover{
+    border: 2px solid #D7E5BE;
+    border-radius: 16px;
+    padding: 20px;
+    width: 33%;
+    transform: scale(1.05);
+
 }
 
 .Elite-plan i{
@@ -390,6 +461,18 @@
     color: #FFFFFF;
     width: 33%;
     margin-right: 30px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.Pro-plan:hover{
+    border: 2px solid #D7E5BE;
+    border-radius: 16px;
+    padding: 20px;
+    background-color: #060606;
+    color: #FFFFFF;
+    width: 33%;
+    margin-right: 30px;
+    transform: scale(1.05);
 }
 
 .Pro-plan .items{
@@ -483,6 +566,13 @@
     background-color: #FFFFFF
 }
 
+.frame-4-img img{ 
+    width: 301px;
+    height: 383px;
+    top: 16px;
+    left: 811px;
+}
+
 .frame-4{
     display: flex;
     justify-content: space-between;
@@ -535,6 +625,12 @@
     font-weight: 600;
 }
 
+.see-products a:hover{
+    color: #004C1F;
+    font-weight: bold;
+    transition: 0.2s;
+}
+
 .frame-4-img img{
     width: 300px;
     border-radius: 40px;
@@ -551,6 +647,14 @@
     padding: 40px 20px 40px 20px;
     border-radius: 24px;
     width: 32%
+}
+
+.benefits-1:hover{
+    background-color: #D7E5BE;
+    padding: 40px 20px 40px 20px;
+    border-radius: 24px;
+    width: 34%;
+    transition: 0.5s;
 }
 
 .benefits-1 h3{
@@ -585,6 +689,25 @@
     border-radius: 41.38px;
     cursor: pointer;
 }
+
+.learn-btn:hover {
+    position: relative;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding-right: 20px;
+    padding: 40px;
+    border: 2px solid #004C1F;
+    background-color:#004C1F;
+    color: #FFFFFF;
+    width: 128.17px;
+    height: 40.76px;
+    padding: 7.88px 15.76px 7.88px 15.76px;
+    gap: 7.88px;
+    border-radius: 41.38px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+    
     
 .arrow {
     position: absolute;
@@ -604,9 +727,9 @@
 
 #consulting h5{
     color: #2E2E2E;
-    font-size: 15.76px;
+    font-size: 17px;
     font-weight: 400;
-    line-height: 23.64px;
+    line-height: 27px;
     text-align: left;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -653,6 +776,17 @@
     font-size: medium;
     cursor: pointer;
 }
+.consulting-buttons button:hover{
+    border: 1px solid #004C1F;
+    color: #FFFFFF;
+    width: 150px;
+    padding: 5px;
+    border-radius:40px;
+    font-weight: 600;
+    margin-right: 20px;
+    font-size: medium;
+    cursor: pointer;
+}
 
 #blog{
     display: flex;
@@ -685,43 +819,46 @@
     text-align: left;
     color: #4E4E4E;
 }
-.testimonials{
+
+.testimonial-slider {
+    position: relative;
+    width: 100%;
+    max-width: 1200px;
+    overflow: hidden;
+}
+
+.slides {
+    display: flex;
+    transition: transform 1s ease;
+}
+
+.slide {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
+    width: 100%;
+    flex-shrink: 0;
 }
 
-.testimonials-1{
+.testimonials-1 {
     width: 365.51px;
     height: 330.04px;
     border-radius: 24px;
     background-color: #D7E5BE;
     padding: 30px 20px 20px 20px;
+    margin-right: 40px;
 }
 
-.testimonials-1 h5{
-    font-size: 15.76px;
-    font-weight: 500;
-    line-height: 23.64px;
-    text-align: left;
-    color:#060606;
+.testimonials-1:hover {
+    width: 370.51px;
+    height: 340.04px;
+    border-radius: 24px;
+    background-color: #D7E5BE;
+    padding: 30px 20px 20px 20px;
+    transition: 0.5s;
 }
 
-.testimonials img{
-
-    width: 55.17px;
-    height: 55.17px;
-    border-radius: 50%;
-    margin-right: 20px;
-
-}
-
-.testimonial-image{
-    display: flex;
-    margin-top: 30px;
-}
-
-.testimonial-name h3{
+.testimonials-1 h5 {
     font-size: 15.76px;
     font-weight: 500;
     line-height: 23.64px;
@@ -729,7 +866,27 @@
     color: #060606;
 }
 
-.testimonial-name h4{
+img {
+    width: 55.17px;
+    height: 55.17px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.testimonial-image {
+    display: flex;
+    margin-top: 30px;
+}
+
+.testimonial-name h3 {
+    font-size: 15.76px;
+    font-weight: 500;
+    line-height: 23.64px;
+    text-align: left;
+    color: #060606;
+}
+
+.testimonial-name h4 {
     font-size: 13.79px;
     font-weight: 500;
     line-height: 20.69px;
@@ -737,32 +894,74 @@
     color: #2E2E2E;
 }
 
-.FAQ button{
-    width: 100%;
-    height: 200px;
-    top: 5036.43px;
-    left: 140.58px;
-    padding: 25.62px 24.63px 26.08px 23.15px;
-    gap: 637.43px;
-    border-radius: 24px;
-    color: #2E2E2E;
-    background-color: #EFEFEF;
-    font-size: 23.64px;
-    font-weight: 600;
-    line-height: 35.47px;
-    text-align: left;
-    margin-top: 15px;
-    border: none;
+.container {
+  width:1200px;
+  margin: 20px auto;
 }
 
-.FAQ button h5{
-    font-family: Poppins;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 29px;
-    text-align: left;
-    color: #4E4E4E;
-    margin-top: 10px;
+.container .heading {
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.container .accordion-wrapper {
+  padding: 0 20px;
+}
+
+.container .accordion {
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+
+.container .accordion.active .accordion-heading {
+  background: #F3F4E5;
+  color: #2E2E2E;
+}
+
+.container .accordion.active .accordion-heading i {
+  color: #2E2E2E;
+  transform: rotate(180deg);
+  transition: transform 0.2s 0.1s;
+}
+
+.container .accordion.active .accordion-content {
+  display: block;
+}
+
+.container .accordion-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  background: #F3F4E5;
+  border: 1px solid #F3F4E5;
+  border-radius: 14px;
+  padding: 15px 20px;
+}
+
+.container .accordion-heading h3 {
+  font-size: 20px;
+}
+
+.container .accordion-content {
+  padding: 15px 20px;
+  border: 2px solid #F3F4E5;
+  border-radius: 0px 0px 14px 14px;
+  font-size: 15px;
+  background:#F3F4E5;
+  border-top: 0;
+  display: none;
+  animation: animate 0.2s linear backwards;
+  line-height: 2;
+  transform-origin: top;
+}
+
+@keyframes animate {
+  0% {
+    transform: scaleY(0);
+  }
 }
 
 .newsletter{
@@ -864,6 +1063,18 @@
     padding-right: 150px;
 }
 
+.footer-info-1 a:hover{
+    text-decoration: none;
+    color: #004C1F;
+    font-weight: bold;
+    transition: 0.2s;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 27px;
+    padding-right: 150px;
+}
+
+
 .footer-info-2{
     display: flex;
     flex-direction: row;
@@ -889,6 +1100,18 @@
 
 }
 
+.footer-info-2-link a:hover{
+    padding-right: 140px;
+    padding-bottom: 10px;
+    color: #004C1F;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: left;
+
+}
+
 .footer-info-2-link-contact{
     display: flex;
     flex-direction: column;
@@ -902,6 +1125,16 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
+
+.footer-info-2-link-contact a:hover{
+    padding-bottom: 10px;
+    color: #004C1F;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
     line-height: 24px;
     text-align: left;
 }
