--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -37,7 +37,7 @@
 
 #nav-bar h5{
     color:#004C1F;
-    margin-left: -200px;
+    margin-left: -225px;
 }
 
 #nav-bar ul li{
@@ -312,6 +312,430 @@ nav ul li:hover{
     margin: 0 12rem 4rem 12rem ;    
 }
 
+.my-cart{
+    display: flex;
+    margin:5rem 12rem 1rem 12rem;
+}
+
+.my-cart img{
+    width: 568px;
+    height: 411px;
+    border-radius: 16px;
+    margin-right: 30px;
+}
+
+.five-star{
+    display: flex;
+    align-items: center;
+    padding-right: 15px;
+}
+
+.five-star h3,i{
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: left;
+    color: #FFA500; 
+    padding-right:10px ;
+}
+
+.five-star h6{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+    color:#6E6E6E;
+}
+
+
+.div-1 p{
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 48px;
+    text-align: left;
+    color: #2E2E2E;
+}
+
+.div-1 h6{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #4E4E4E;
+}
+
+.counter-container {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 10px 10px 0px;
+    margin-bottom: 30px;
+}
+
+button {
+    font-size: 20px;
+    padding: 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    background-color: #D7E5BE;
+    color: #060606;
+    border: none;
+    border-radius: 5px;
+}
+
+.purchase-button{
+    font-size: 20px;
+    padding: 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    background-color: #004C1F;
+    color: #D7E5BE;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.purchase-button:hover{
+        background-color: #1a6939;
+        color: #F3F4E5;
+}
+
+button:hover {
+    background-color: #1a6939;
+    color: #F3F4E5;
+}
+
+#numberDisplay {
+    font-size: 24px;
+    margin: 0 15px;
+    width: 50px;
+    text-align: center;
+}
+
+.sub-nav ul{
+    display: flex;
+    list-style-type: none;
+    text-decoration: none;
+    margin:3rem 12rem 0.2rem 12rem;
+    width: 1000px;
+    justify-content: space-between;
+}
+
+.sub-nav ul li{
+    margin-right: 10px;
+    justify-content: space-between;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: left;
+    color: #6E6E6E;
+}
+
+.nav-link {
+    text-decoration: none;
+    color:#6E6E6E;
+    padding: 10px 0;
+    position: relative;
+    display: inline-block;
+}
+
+/* Add underline on hover */
+.nav-link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 4px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: #1a6939;
+    color: #004C1F;
+    transition: width 0.3s ease;
+    -webkit-transition: width 0.3s ease;
+}
+
+hr{
+    width: 1200px;
+    height: 4px;
+    margin-left: 12rem;
+}
+
+/* Hover state */
+.nav-link:hover::after {
+    width: 100%;
+    left: 0;
+    background: #1a6939;
+    color: #004C1F;
+}
+
+/* Active state */
+.nav-link.active::after {
+    width: 100%;
+    left: 0;
+    background:#1a6939;
+    color: #004C1F;
+}
+
+#product-info{
+    margin:1rem 12rem 2rem 12rem;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #4E4E4E;
+
+}
+
+.review-1{
+    background-color: #F3F4E5;
+    width: 677px;
+    height: 175px;
+    padding: 24px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+
+.review-1 p{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+    color: #2E2E2E;
+}
+
+.review-info{
+    display: flex;
+    align-items: center;
+}
+
+.review-info img{
+    width: 48px;
+    height: 48px;
+    border-radius:50%;
+    margin-right: 8px;
+}
+
+.review-info p{
+    margin-right: 8px;
+}
+
+.review-info i{
+    width: 16px;
+    height: 16px;
+    opacity: 0.99px;
+    color: #2E2E2E;
+    font-size: 16px;
+}
+
+#black-star{
+    color: #E4E4E4;
+}
+
+.customer-review-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#customer-review{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    color: #2E2E2E;
+}
+
+.learn-btn {
+    width: Hug (168.63px)px;
+    height: Hug (44px)px;
+    padding: 10px 14px 10px 14px;
+    gap: 8px;
+    border-radius: 37.44px;
+    border: 1.97px solid #2E2E2E;
+    color: #2E2E2E;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    text-align: center;
+}
+
+.learn-btn:hover {
+    position: relative;
+    margin-right: 20px;
+    margin-top: 20px;
+    padding-right: 20px;
+    padding: 40px;
+    border: 2px solid #004C1F;
+    background-color:#004C1F;
+    color: #FFFFFF;
+    width: 128.17px;
+    height: 40.76px;
+    padding: 7.88px 15.76px 7.88px 15.76px;
+    gap: 7.88px;
+    border-radius: 41.38px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+    
+.arrow {
+    position: absolute;
+    top: 60%;
+    right: 1px;
+    transform: translateY(-50%);
+    margin-left: 10px;
+}
+
+.more-review{
+    display:flex;
+    justify-content: center;
+}
+
+.container {
+    width:1200px;
+    margin: 20px auto;
+  }
+  
+  .container .heading {
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .container .accordion-wrapper {
+    padding: 0 20px;
+  }
+  
+  .container .accordion {
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+  
+  .container .accordion.active .accordion-heading {
+    background: #F3F4E5;
+    color: #2E2E2E;
+  }
+  
+  .container .accordion.active .accordion-heading i {
+    color: #2E2E2E;
+    transform: rotate(180deg);
+    transition: transform 0.2s 0.1s;
+  }
+  
+  .container .accordion.active .accordion-content {
+    display: block;
+  }
+  
+  .container .accordion-heading {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    background: #F3F4E5;
+    border: 1px solid #F3F4E5;
+    border-radius: 14px;
+    padding: 15px 20px;
+  }
+  
+  .container .accordion-heading h3 {
+    font-size: 20px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+
+  }
+  
+  .container .accordion-content {
+    padding: 15px 20px;
+    border: 2px solid #F3F4E5;
+    border-radius: 0px 0px 14px 14px;
+    font-size: 15px;
+    background:#F3F4E5;
+    border-top: 0;
+    display: none;
+    animation: animate 0.2s linear backwards;
+    line-height: 2;
+    transform-origin: top;
+  }
+  
+  @keyframes animate {
+    0% {
+      transform: scaleY(0);
+    }
+  }
+
+  .faq{
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+  }
+
+  .other-product{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 12rem;
+    margin-right: 12rem;
+    margin-bottom: 90px;
+  }
+
+  .my-products{
+    display:flex;
+  }
+
+  #other-products{
+    margin-top: 70px;
+    margin-bottom: -20px;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: center;
+    color: #2E2E2E;
+  }
+
+.cart{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.product-info{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.product-info img{
+    width: 104px;
+    height: 127px;
+    border-radius: 16px;   
+}
+
+.cart-info{
+    display: none;
+    margin-top: 12rem;
+    margin-right: 12rem;
+    margin-left: 30rem;
+    width: 40%;
+    border:1px solid #2E2E2E;
+    padding: 25px;
+    border-radius: 13px;
+}
+
+.cart-info i{
+    text-align: center;
+    position: relative;
+    left:98%;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
 .footer{
     background-color:#D7E5BE;
     margin-top: 40px;
@@ -323,7 +747,6 @@ nav ul li:hover{
 .footer-info-1{
     padding-left: 300px;
     display: flex;
-
 }
 
 .footer-info-1 a{
