--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -385,7 +385,7 @@ button {
     border-radius: 5px;
 }
 
-.purchase-button{
+#purchase-button{
     font-size: 20px;
     padding: 10px;
     margin: 0 5px;
@@ -397,7 +397,7 @@ button {
     text-align: center;
 }
 
-.purchase-button:hover{
+#purchase-button:hover{
         background-color: #1a6939;
         color: #F3F4E5;
 }
@@ -533,13 +533,13 @@ hr{
     color: #E4E4E4;
 }
 
-.customer-review-info{
+.my-customer-review-info{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#customer-review{
+#my-customer-review{
     text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
