--- a/About-Us/about-us.css
+++ b/About-Us/about-us.css
@@ -299,6 +299,29 @@
     color: #4E4E4E;
 }   
 
+.Join-us{
+    text-align: right;
+    margin-right: 17rem;
+    margin-top: 40px;
+}
+
+.Join-us h1{
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    text-align: right;
+    color: #2E2E2E;
+    margin-bottom: 20px;
+}
+
+.Join-us h2{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    text-align: right;
+    color: #4E4E4E;
+}   
+
 .newsletter{
     margin-top: 40px;
     margin-left: 17rem;
