--- a/index.css
+++ b/index.css
@@ -7,6 +7,10 @@
         font-family: 'poppins',sans-serif;
     }
 
+    body{
+        overflow-x: hidden;
+    }
+
     .html{
         scroll-behavior: smooth;
     }
@@ -136,10 +140,10 @@
     .dropdown_menu{
         display: none;
         position: absolute;
-        right: 1rem;
-        top: 150px;
+        right: 5rem;
+        top: 10px;
         height: 0;
-        width: 300px;
+        width: 500px;
         background: rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(15px);
         border-radius: 10px;
@@ -1277,6 +1281,10 @@
    
 
 @media (max-width:1900px){
+    body{
+        overflow-x: hidden;
+    }
+
     header{
         height: 100vh;
         background-image: url(images/background-image.jpeg);
@@ -1395,17 +1403,18 @@
         display: none;
         position: absolute;
         right: 5rem;
-        top: 150px;
-        height: 300px;
-        width: 300px;
+        top: 10px;
+        height: 0;
+        width: 400px;
         background: rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(15px);
         border-radius: 10px;
         overflow: hidden;
+
     }
 
     .dropdown_menu .open{
-        height: 300px;
+        height: 100vh;
     }
 
     .dropdown_menu li a{
@@ -2540,6 +2549,10 @@
 
 
 @media (max-width:1200px){
+    body{
+        overflow-x: hidden;
+    }
+
     header{
         height: 100vh;
         background-image: url(images/background-image.jpeg);
@@ -2658,10 +2671,10 @@
         display: none;
         position: absolute;
         padding: 1rem;
-        right: 5rem;
+        right: 2rem;
         top: 150px;
-        height: 320px;
-        width: 300px;
+        height: 75vh;
+        width: 400px;
         background: rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(15px);
         border-radius: 10px;
@@ -3802,6 +3815,11 @@
 }
 
 @media (max-width:1080px){
+
+    body{
+        overflow-x: hidden;
+    }
+
     .links li a, .action_btn-1, .action_btn{
         display: none;
     }
@@ -3820,6 +3838,10 @@
 }
 
 @media (max-width:576px){
+    body{
+        overflow-x: hidden;
+    }
+
     .dropdown_menu{
         left: 2rem;
         width: unset;
