--- a/css/pages/login.css
+++ b/css/pages/login.css
@@ -744,7 +744,7 @@
         top: 150px;
         height: 75vh;
         width: 19rem;
-        background: rgba(255, 255, 255, 0.425);
+        background:#FFFFFF;
         backdrop-filter: blur(15px);
         border-radius: 10px;
         overflow: hidden;
